# snowmin

./: .gitignore  .pre-commit-config.yaml  DESIGN_NOTES.md  README.md  pyproject.toml  stack.py
src/flakeform/: __init__.py
src/snowmin/: __init__.py  cli.py
src/snowmin/core/: config.py  connection.py  introspector.py  registry.py  runner.py  stack_loader.py  state.py
src/snowmin/operations/: __init__.py  pipes.py  schema.py  streams.py  tables.py  tasks.py
src/snowmin/resources/: account.py  database.py  schema_objects.py
tests/: conftest.py
tests/cli/: test_apply.py  test_pipes.py  test_plan.py  test_streams.py  test_tasks.py
tests/core/: test_connection.py  test_stack_loader.py
